# obs-multiview

./: .impeccable.md  AGENTS.md  README.md  add_new_step_modal.html  dock.html  index.html  media_library.html  modal_pop_up_when_user_in_service_hub_from_the_first_time.html  new_bible_theme.ts  package-lock.json  package.json  quick_merge.html  service_completed_page.html  speaker_section_under_service_hub.html  start_service_modal.html  updated_dashboard_page.html  vite.config.ts
.cargo/: config.toml
.github/: BRANCHING.md
.interface-design/: system.md
dock-reference/: obs_church_studio_introductory_screen_when_loaded_into_obs.html  tab_for_events_on_dock.html  tab_for_scripture_tab_on_dock.html  tab_for_sermon_points.html  tab_for_speakers_tab_on_dock.html  tab_for_worship_on_dock.html
new_steps_modal/: audio_next_step.html  countdown_next_step.html  images_and_slides.html  scene_swither.html  template_preset_next_step.html  video_next_step.html
public/: bible-overlay-bg.html  bible-overlay-fullscreen.html  bible-overlay-lower-third.html  live-tool-overlay.html  lower-third-overlay.html  pre-service-countdown.html  pre-service-media.html  template_dashboard_full_screen.html
scripts/: downloadBible.cjs  downloadBibleXml.cjs  generateBibleJson.cjs  migrateCssIcons.cjs  migrateIcons.cjs  smart-bible-controller-modal.html  sync-local-llm-model.cjs  sync-version.cjs
src/: App.css  App.tsx  (+4 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_llm.rs  main.rs
(+236 files in other folders)
